--- a/style.css
+++ b/style.css
@@ -176,18 +176,28 @@
 
 .navbar__menu__item:hover{
     background-color: #313131;
-    transition: all 700ms ease-out;
+    transition: all 500ms ease-out;
 
 }
 
+section {
 
+    padding: 50px;
+    text-align: center;
+    max-width: 1200px;
+    margin:auto;
+
+}
 
 /* Home */
 
 #home {
-    background: url("imgs/1712023E4E38B58039.jpg") center/cover no-repeat;
+    background:url("imgs/1712023E4E38B58039.jpg") center/cover no-repeat;
     padding:40px;
+
     text-align: center;
+    max-width: 100vw;
+
 }
 
 .home__title,.home__description{
@@ -210,4 +220,105 @@
     border:2px solid;
     border-radius: 5px;
     border-color: rgb(40, 47, 68);
+}
+
+
+
+/* About */
+
+.about__majors{
+    display: flex;
+    justify-content: space-evenly;
+    justify-items: center;
+    margin:80px 0;
+    align-content: center;
+    align-items: center;
+
+}
+
+.major__icon{
+    width:150px;
+    height:150px;
+    line-height: 150px;
+    font-size:70px;
+    color: gray;
+    margin: auto;
+    border: 1px solid var(--color-light-grey);
+    border-radius: 50%;
+    margin-bottom: 16px;
+
+}
+
+.major__title, .major__description {
+
+    color: var(--color-dark-grey);
+    font-size:20px;
+}
+.major__description{
+
+    font-size: 16px;
+
+}
+
+.major__icon:hover i{
+
+    color: var(--color-blue);
+    transform: rotate(-30deg);
+
+}
+
+.major__icon i{
+
+    transition: all 300ms ease-out ;
+}
+
+.job{
+    display: flex;
+    align-items: center;
+
+}
+
+
+.job__description{
+    text-align: left;
+    font-size: 16px;
+
+}
+.job__name{
+    font-weight: 800;
+}
+.job__period{
+    font-size: 14px;
+
+}
+
+
+
+
+
+.job__logo{
+    width:80px;
+    height:80px;
+    /* line-height: 150px; */
+    margin: 5px;
+    padding: 0px;
+    border-radius: 0%;
+
+
+}
+
+.job__logo_{
+    width:80px;
+    height:80px;
+    /* line-height: 150px; */
+    margin: 5px;
+    padding: 10px;
+    border-radius: 0%;
+
+
+}
+
+#skills {
+    max-width: 100vw;
+    background-color:rgb(207, 234, 245)
 }
