--- a/style.css
+++ b/style.css
@@ -318,7 +318,146 @@ section {
 
 }
 
+
+/* Skills */
 #skills {
     max-width: 100vw;
-    background-color:rgb(207, 234, 245)
+    background-color:rgb(207, 234, 245);
+}
+.skillset__title{
+    margin-top: 0px;
+    color:white;
+    font-weight: 800;
+    font-size: 21px;
+}
+.skillset {
+    color:white;
+    font-size: 15px;
+
+    display:flex;
+    background-color: var(--color-light-grey);
+    margin: 20px 0;
+
+}
+
+.skillset__left{
+flex-basis: 60%;
+background-color: var(--color-dark-grey);
+padding: 20px 40px;
+}
+
+
+.skillset__right{
+    flex-basis: 40%;
+    list-style: none;
+
+    }
+
+
+
+.tools{
+margin-top: 0px;
+padding-top: 0px;
+background-color: var(--color-grey);
+
+}
+
+.etc__list{
+
+    padding-bottom: 10px;
+    
+    padding-top: 0px;
+}
+
+.etc__list .skillset__title{
+
+    padding-top: 0px;
+}
+
+
+.skill__description{
+ 
+    display: flex;
+    justify-content: space-between;
+}
+
+.skill__bar{
+    width: 100%;
+    height: 5px;
+    background-color: var(--color-grey);
+    margin-bottom: 10px;
+}
+
+.skill__value{
+    height: 5px;
+    background-color: var(--color-orange);
+}
+
+
+
+/* Work */
+
+
+
+.category__btn{
+
+    border:1px solid var(--color-dark-white);
+    border-radius: 4px;
+    font-size: 15px;
+    padding:5px 15px;
+    font-weight: 650;
+    margin-top: 10px;
+    margin-left: 3px;
+    padding-left: 30px;
+
+}
+
+#work h3{
+
+    font-size: 18px;
+    font-weight: 1000;
+
+}
+
+.category__btn.active,
+.category__btn:hover{
+
+
+    /* background-color: var(--color-light-grey); */
+    /* background-color: var(--color-pink); */
+    /* background-color: #bbdefb; */
+    /* background-color: #546e7a; */
+    /* background-color: #29434e; */
+    /* background-color: #819ca9; */
+    /* background-color: #455a64; */
+    background-color: #707070;
+    /* background-color: #8eacbb; */
+    color: white;
+    transition: 350ms ease;
+
+}
+
+
+
+.category__btn.active .category__count,
+.category__btn:hover .category__count{
+    opacity:1;
+    top:0px;
+}
+
+.category__count {
+
+    background-color: var(--color-orange);
+    /* background-color: var(--color-dark-grey); */
+    /* background-color: #819ca9; */
+    border-radius: 50%;
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    color: var(--color-yellow);
+    position:relative;
+    top:-20px;
+    opacity: 0;
+    transition: all 350ms ease-in; 
 }
