--- a/style.css
+++ b/style.css
@@ -228,13 +228,17 @@ section {
 
 .about__majors{
     display: flex;
-    justify-content: space-evenly;
+    height: 100%;
+    justify-content: space-between;
     justify-items: center;
     margin:80px 0;
     align-content: center;
-    align-items: center;
+    align-items: top;
+    padding: 40px;
 
 }
+
+
 
 .major__icon{
     width:150px;
@@ -249,13 +253,28 @@ section {
 
 }
 
+.about__majors{
+/* margin:30px */
+padding: 30px;
+display: flex;
+flex-wrap: wrap;
+
+}
+
+.major{
+
+    margin:10px
+}
+
 .major__title, .major__description {
 
     color: var(--color-dark-grey);
     font-size:20px;
+    width:150px;
+    margin: auto;
 }
 .major__description{
-
+    justify-content: center;
     font-size: 16px;
 
 }
@@ -461,3 +480,31 @@ background-color: var(--color-grey);
     opacity: 0;
     transition: all 350ms ease-in; 
 }
+
+
+.work__projects{
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+
+.project{
+    border: 1px solid var(--color-dark-grey);
+    width: 280px;
+    height: 320px;
+    margin:20px;
+    padding:5px;
+
+}
+
+.project__img{
+    
+
+width: 100%;
+height: 65%;
+
+
+}
+
