skills width error

--- a/style.css
+++ b/style.css
@@ -341,21 +341,27 @@ flex-wrap: wrap;
 /* Skills */
 #skills {
     max-width: 100vw;
+    margin: 0;
     background-color:rgb(207, 234, 245);
+    
+
+    /* display: block; */
+
 }
 .skillset__title{
-    margin-top: 0px;
+    
     color:white;
     font-weight: 800;
     font-size: 21px;
+    margin:0;
 }
 .skillset {
+    max-width: 100%;
     color:white;
     font-size: 15px;
-
     display:flex;
     background-color: var(--color-light-grey);
-    margin: 20px 0;
+    /* margin: 20px 0; */
 
 }
 
@@ -369,7 +375,6 @@ padding: 20px 40px;
 .skillset__right{
     flex-basis: 40%;
     list-style: none;
-
     }
 
 
