css 작업 1차 마무리

--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ section {
     justify-content: space-between;
     justify-items: center;
     margin:80px 0;
-    align-content: center;
+    align-content: flex-start;
     align-items: top;
     padding: 40px;
 
@@ -496,20 +496,86 @@ background-color: var(--color-grey);
 }
 
 .project{
-    border: 1px solid var(--color-dark-grey);
+    position: relative;
+    border: 2px solid var(--color-dark-grey);
     width: 280px;
     height: 320px;
     margin:20px;
-    padding:5px;
+    /* padding:5px; */
 
 }
 
 .project__img{
     
-
 width: 100%;
-height: 65%;
+height: 100%;
+align-self: center;
+
 
 
 }
 
+.project__description{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    background-color: black;
+    top: 0;
+    opacity: 0.0;
+    transition: all 350ms ease-out;
+    transform: translateY(10px);
+}
+
+
+.project__description:hover{
+
+    opacity: 0.8;
+    transform: translateY(0px);
+
+
+}
+
+
+.project__description h3{
+color: var(--color-white);
+
+}
+
+
+.project__description h3:after{
+        color: var(--color-white);
+        content:'';
+        display: block;
+        width: 25px;
+        /* height: 2px; */
+        left:50%
+    }
+    
+
+
+
+#contact{
+    max-width: 100%;
+    margin: 0;
+    color: var(--color-white);
+    /* background-color: var(--color-grey); */
+    background-color: rgb(82, 74, 90);
+    
+}
+
+#contact *{
+    
+
+    color: white;
+
+}
+
+
+.contact__links i{
+
+    font-size: 23px;
+    margin: 2px;
+}
