--- a/style.css
+++ b/style.css
@@ -212,6 +212,9 @@ section {
     max-width: 100vw;
 
 }
+/* #home.home--dark{
+    opacity:1
+} */
 
 .home__title,.home__description{
      color: rgb(218, 218, 218);
@@ -591,4 +594,22 @@ color: var(--color-white);
 
     font-size: 23px;
     margin: 2px;
+}
+
+
+.arrow-up{
+    position: fixed;
+    bottom: 4px;
+    right: 4px;
+    font-size: 30px;
+    color:var(--color-dark-white);
+    pointer-events: none;
+    opacity: 0;
+    border-radius: 50%;
+    transition: opacity 300ms ease-in;
+}
+
+.arrow-up.visible{
+    opacity: 1;
+    pointer-events: auto;
 }
